--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -752,8 +752,14 @@ video {
   bottom: 0px;
 }.bottom-1\/2 {
   bottom: 50%;
+}.bottom-32 {
+  bottom: 8rem;
 }.bottom-5 {
   bottom: 1.25rem;
+}.bottom-6 {
+  bottom: 1.5rem;
+}.bottom-96 {
+  bottom: 24rem;
 }.bottom-\[60px\] {
   bottom: 60px;
 }.end-0 {
@@ -788,12 +794,6 @@ video {
   top: 1rem;
 }.top-6 {
   top: 1.5rem;
-}.bottom-32 {
-  bottom: 8rem;
-}.bottom-6 {
-  bottom: 1.5rem;
-}.bottom-96 {
-  bottom: 24rem;
 }.isolate {
   isolation: isolate;
 }.z-0 {
@@ -838,8 +838,10 @@ video {
   margin: -0.75rem;
 }.-m-3\.5 {
   margin: -0.875rem;
-}.m-3 {
-  margin: 0.75rem;
+}.m-2 {
+  margin: 0.5rem;
+}.m-2\.5 {
+  margin: 0.625rem;
 }.-mx-2 {
   margin-left: -0.5rem;
   margin-right: -0.5rem;
@@ -893,14 +895,20 @@ video {
   margin-bottom: 2.5rem;
 }.mb-2 {
   margin-bottom: 0.5rem;
+}.mb-20 {
+  margin-bottom: 5rem;
 }.mb-3 {
   margin-bottom: 0.75rem;
 }.mb-4 {
   margin-bottom: 1rem;
+}.mb-40 {
+  margin-bottom: 10rem;
 }.mb-5 {
   margin-bottom: 1.25rem;
 }.mb-6 {
   margin-bottom: 1.5rem;
+}.mb-8 {
+  margin-bottom: 2rem;
 }.me-1 {
   margin-inline-end: 0.25rem;
 }.me-2 {
@@ -911,6 +919,8 @@ video {
   margin-inline-end: 1.5rem;
 }.ml-1 {
   margin-left: 0.25rem;
+}.ml-10 {
+  margin-left: 2.5rem;
 }.ml-12 {
   margin-left: 3rem;
 }.ml-2 {
@@ -919,6 +929,8 @@ video {
   margin-left: 0.75rem;
 }.ml-4 {
   margin-left: 1rem;
+}.ml-5 {
+  margin-left: 1.25rem;
 }.ml-auto {
   margin-left: auto;
 }.mr-2 {
@@ -927,10 +939,12 @@ video {
   margin-right: 1rem;
 }.mr-5 {
   margin-right: 1.25rem;
+}.ms-1 {
+  margin-inline-start: 0.25rem;
+}.ms-1\.5 {
+  margin-inline-start: 0.375rem;
 }.ms-2 {
   margin-inline-start: 0.5rem;
-}.ms-2\.5 {
-  margin-inline-start: 0.625rem;
 }.ms-3 {
   margin-inline-start: 0.75rem;
 }.ms-4 {
@@ -945,28 +959,24 @@ video {
   margin-top: 0.125rem;
 }.mt-1 {
   margin-top: 0.25rem;
+}.mt-10 {
+  margin-top: 2.5rem;
 }.mt-2 {
   margin-top: 0.5rem;
+}.mt-28 {
+  margin-top: 7rem;
 }.mt-3 {
   margin-top: 0.75rem;
 }.mt-4 {
   margin-top: 1rem;
+}.mt-5 {
+  margin-top: 1.25rem;
 }.mt-6 {
   margin-top: 1.5rem;
 }.mt-8 {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
-}.mb-20 {
-  margin-bottom: 5rem;
-}.mb-40 {
-  margin-bottom: 10rem;
-}.mb-8 {
-  margin-bottom: 2rem;
-}.ml-5 {
-  margin-left: 1.25rem;
-}.mt-10 {
-  margin-top: 2.5rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1000,12 +1010,16 @@ video {
   height: 2.5rem;
 }.h-11 {
   height: 2.75rem;
+}.h-14 {
+  height: 3.5rem;
 }.h-16 {
   height: 4rem;
 }.h-2 {
   height: 0.5rem;
 }.h-2\.5 {
   height: 0.625rem;
+}.h-2\/3 {
+  height: 66.666667%;
 }.h-20 {
   height: 5rem;
 }.h-3 {
@@ -1026,6 +1040,8 @@ video {
   height: 14rem;
 }.h-6 {
   height: 1.5rem;
+}.h-60 {
+  height: 15rem;
 }.h-7 {
   height: 1.75rem;
 }.h-8 {
@@ -1040,8 +1056,8 @@ video {
   height: 270px;
 }.h-\[30rem\] {
   height: 30rem;
-}.h-\[40rem\] {
-  height: 40rem;
+}.h-\[4rem\] {
+  height: 4rem;
 }.h-\[50rem\] {
   height: 50rem;
 }.h-\[calc\(100\%-1rem\)\] {
@@ -1054,8 +1070,6 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.h-2\/3 {
-  height: 66.666667%;
 }.max-h-72 {
   max-height: 18rem;
 }.max-h-full {
@@ -1098,6 +1112,8 @@ video {
   width: 8rem;
 }.w-4 {
   width: 1rem;
+}.w-40 {
+  width: 10rem;
 }.w-44 {
   width: 11rem;
 }.w-48 {
@@ -1114,8 +1130,14 @@ video {
   width: 2rem;
 }.w-9 {
   width: 2.25rem;
+}.w-96 {
+  width: 24rem;
 }.w-\[--sidebar-width\] {
   width: var(--sidebar-width);
+}.w-\[10rem\] {
+  width: 10rem;
+}.w-\[21rem\] {
+  width: 21rem;
 }.w-\[30px\] {
   width: 30px;
 }.w-\[calc\(100\%\+2rem\)\] {
@@ -1131,8 +1153,6 @@ video {
   width: 1px;
 }.w-screen {
   width: 100vw;
-}.w-96 {
-  width: 24rem;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[theme\(spacing\.4\)\] {
@@ -1358,12 +1378,16 @@ video {
   justify-content: center;
 }.justify-between {
   justify-content: space-between;
+}.justify-around {
+  justify-content: space-around;
 }.justify-items-center {
   justify-items: center;
 }.gap-1 {
   gap: 0.25rem;
 }.gap-1\.5 {
   gap: 0.375rem;
+}.gap-10 {
+  gap: 2.5rem;
 }.gap-2 {
   gap: 0.5rem;
 }.gap-3 {
@@ -1379,6 +1403,9 @@ video {
 }.gap-x-1 {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
+}.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }.gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -1394,6 +1421,9 @@ video {
 }.gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
+}.gap-x-80 {
+  -moz-column-gap: 20rem;
+       column-gap: 20rem;
 }.gap-y-1 {
   row-gap: 0.25rem;
 }.gap-y-10 {
@@ -1412,9 +1442,6 @@ video {
   row-gap: 2rem;
 }.gap-y-px {
   row-gap: 1px;
-}.gap-x-10 {
-  -moz-column-gap: 2.5rem;
-       column-gap: 2.5rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1502,9 +1529,6 @@ video {
 }.rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
-}.rounded-b-3xl {
-  border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
 }.rounded-b-xl {
   border-bottom-right-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -1529,9 +1553,6 @@ video {
 }.rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
-}.rounded-t-3xl {
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
 }.rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1542,6 +1563,9 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
+}.border-x-\[0\.5px\] {
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1598,6 +1622,9 @@ video {
 }.bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(225 239 254 / var(--tw-bg-opacity));
+}.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(195 221 253 / var(--tw-bg-opacity));
 }.bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
@@ -1668,23 +1695,14 @@ video {
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}.from-blue-400 {
-  --tw-gradient-from: #76A9FA var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(118 169 250 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.from-blue-800 {
   --tw-gradient-from: #1E429F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(30 66 159 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.to-blue-600 {
   --tw-gradient-to: #1C64F2 var(--tw-gradient-to-position);
-}.to-gray-300 {
-  --tw-gradient-to: #D1D5DB var(--tw-gradient-to-position);
 }.bg-cover {
   background-size: cover;
-}.bg-clip-text {
-  -webkit-background-clip: text;
-          background-clip: text;
 }.bg-center {
   background-position: center;
 }.fill-current {
@@ -1701,6 +1719,8 @@ video {
   padding: 0.25rem;
 }.p-10 {
   padding: 2.5rem;
+}.p-16 {
+  padding: 4rem;
 }.p-2 {
   padding: 0.5rem;
 }.p-2\.5 {
@@ -1713,8 +1733,6 @@ video {
   padding: 1.25rem;
 }.p-6 {
   padding: 1.5rem;
-}.p-16 {
-  padding: 4rem;
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1787,6 +1805,8 @@ video {
 }.py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}.pb-10 {
+  padding-bottom: 2.5rem;
 }.pb-2 {
   padding-bottom: 0.5rem;
 }.pb-5 {
@@ -1809,12 +1829,16 @@ video {
   padding-inline-end: 1.5rem;
 }.pe-8 {
   padding-inline-end: 2rem;
+}.pl-10 {
+  padding-left: 2.5rem;
 }.pl-2 {
   padding-left: 0.5rem;
 }.pl-5 {
   padding-left: 1.25rem;
 }.pl-7 {
   padding-left: 1.75rem;
+}.pr-10 {
+  padding-right: 2.5rem;
 }.pr-5 {
   padding-right: 1.25rem;
 }.pr-7 {
@@ -1835,20 +1859,18 @@ video {
   padding-top: 0px;
 }.pt-1 {
   padding-top: 0.25rem;
+}.pt-10 {
+  padding-top: 2.5rem;
 }.pt-2 {
   padding-top: 0.5rem;
+}.pt-20 {
+  padding-top: 5rem;
+}.pt-5 {
+  padding-top: 1.25rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
-}.pb-10 {
-  padding-bottom: 2.5rem;
-}.pl-10 {
-  padding-left: 2.5rem;
-}.pr-10 {
-  padding-right: 2.5rem;
-}.pt-20 {
-  padding-top: 5rem;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -1882,6 +1904,9 @@ video {
 }.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1897,9 +1922,6 @@ video {
 }.text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }.font-black {
   font-weight: 900;
 }.font-bold {
@@ -1938,8 +1960,6 @@ video {
   line-height: 1.5;
 }.leading-relaxed {
   line-height: 1.625;
-}.leading-tight {
-  line-height: 1.25;
 }.tracking-tight {
   letter-spacing: -0.025em;
 }.tracking-tighter {
@@ -1954,12 +1974,12 @@ video {
 }.text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
+}.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(26 86 219 / var(--tw-text-opacity));
 }.text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
-}.text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(35 56 118 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1989,6 +2009,9 @@ video {
 }.text-gray-950 {
   --tw-text-opacity: 1;
   color: rgb(3 7 18 / var(--tw-text-opacity));
+}.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(14 159 110 / var(--tw-text-opacity));
 }.text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(5 122 85 / var(--tw-text-opacity));
@@ -2004,8 +2027,6 @@ video {
 }.text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
-}.text-transparent {
-  color: transparent;
 }.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2159,8 +2180,12 @@ video {
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
+}.first\:border-s-0:first-child {
+  border-inline-start-width: 0px;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
+}.last\:border-e-0:last-child {
+  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2185,6 +2210,9 @@ video {
 }.hover\:bg-blue-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
+}.hover\:bg-blue-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(164 202 254 / var(--tw-bg-opacity));
 }.hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
@@ -2205,6 +2233,9 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -2219,9 +2250,6 @@ video {
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.hover\:bg-blue-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(164 202 254 / var(--tw-bg-opacity));
 }.hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2254,8 +2282,6 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.hover\:underline:hover {
-  text-decoration-line: underline;
 }.hover\:grayscale-0:hover {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2338,6 +2364,8 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
+}.focus-visible\:z-10:focus-visible {
+  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2409,8 +2437,17 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group\/item:first-child .group-first\/item\:rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
+}.group\/item:last-child .group-last\/item\:rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -2483,6 +2520,9 @@ video {
 }.dark\:bg-blue-600:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
+}.dark\:bg-blue-700:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 86 219 / var(--tw-bg-opacity));
 }.dark\:bg-blue-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(35 56 118 / var(--tw-bg-opacity));
@@ -2563,6 +2603,9 @@ video {
 }.dark\:text-green-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(49 196 141 / var(--tw-text-opacity));
+}.dark\:text-green-500:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(14 159 110 / var(--tw-text-opacity));
 }.dark\:text-indigo-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(180 198 252 / var(--tw-text-opacity));
@@ -2598,6 +2641,9 @@ video {
 }.dark\:hover\:border-gray-700:hover:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}.dark\:hover\:bg-blue-500:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
 }.dark\:hover\:bg-blue-700:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
@@ -2681,6 +2727,9 @@ video {
 }.dark\:focus\:ring-blue-800:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
+}.dark\:focus\:ring-blue-900:focus:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(35 56 118 / var(--tw-ring-opacity));
 }.dark\:focus\:ring-gray-600:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
@@ -2690,9 +2739,6 @@ video {
 }.dark\:focus\:ring-indigo-600:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(88 80 236 / var(--tw-ring-opacity));
-}.dark\:focus\:ring-blue-900:focus:is(.dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(35 56 118 / var(--tw-ring-opacity));
 }.dark\:focus\:ring-offset-gray-800:focus:is(.dark *) {
   --tw-ring-offset-color: #1F2937;
 }.dark\:focus-visible\:bg-white\/5:focus-visible:is(.dark *) {
@@ -2729,6 +2775,9 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
+}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -2775,16 +2824,16 @@ video {
     margin-right: auto;
   }
 
+  .sm\:ms-4 {
+    margin-inline-start: 1rem;
+  }
+
   .sm\:ms-auto {
     margin-inline-start: auto;
   }
 
   .sm\:mt-7 {
     margin-top: 1.75rem;
-  }
-
-  .sm\:ms-4 {
-    margin-inline-start: 1rem;
   }
 
   .sm\:block {
@@ -2974,6 +3023,11 @@ video {
     padding-right: 3rem;
   }
 
+  .sm\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2987,11 +3041,6 @@ video {
   .sm\:py-1\.5 {
     padding-top: 0.375rem;
     padding-bottom: 0.375rem;
-  }
-
-  .sm\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
   }
 
   .sm\:pe-3 {
@@ -3097,6 +3146,10 @@ video {
     display: none;
   }
 
+  .md\:h-60 {
+    height: 15rem;
+  }
+
   .md\:h-\[35rem\] {
     height: 35rem;
   }
@@ -3105,20 +3158,28 @@ video {
     height: auto;
   }
 
+  .md\:w-60 {
+    width: 15rem;
+  }
+
   .md\:w-72 {
     width: 18rem;
+  }
+
+  .md\:w-80 {
+    width: 20rem;
+  }
+
+  .md\:w-\[600px\] {
+    width: 600px;
   }
 
   .md\:w-\[900px\] {
     width: 900px;
   }
 
-  .md\:w-60 {
-    width: 15rem;
-  }
-
-  .md\:w-\[600px\] {
-    width: 600px;
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:columns-\[--cols-md\] {
@@ -3170,6 +3231,10 @@ video {
 
   .md\:p-5 {
     padding: 1.25rem;
+  }
+
+  .md\:p-6 {
+    padding: 1.5rem;
   }
 
   .md\:px-6 {
@@ -3262,14 +3327,14 @@ video {
     background-color: transparent;
   }
 
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
   .lg\:px-48 {
     padding-left: 12rem;
     padding-right: 12rem;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .lg\:py-16 {
@@ -3279,11 +3344,6 @@ video {
 
   .lg\:pe-8 {
     padding-inline-end: 2rem;
-  }
-
-  .lg\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .lg\:text-3xl {
@@ -3364,28 +3424,20 @@ video {
     display: none;
   }
 
+  .xl\:w-1\/4 {
+    width: 25%;
+  }
+
+  .xl\:w-2\/4 {
+    width: 50%;
+  }
+
   .xl\:w-2\/5 {
     width: 40%;
   }
 
-  .xl\:w-2\/6 {
-    width: 33.333333%;
-  }
-
   .xl\:w-3\/5 {
     width: 60%;
-  }
-
-  .xl\:w-5\/6 {
-    width: 83.333333%;
-  }
-
-  .xl\:w-full {
-    width: 100%;
-  }
-
-  .xl\:w-1\/4 {
-    width: 25%;
   }
 
   .xl\:w-4\/5 {
@@ -3399,6 +3451,18 @@ video {
 
   .xl\:grid-cols-\[--cols-xl\] {
     grid-template-columns: var(--cols-xl);
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .xl\:p-20 {
+    padding: 5rem;
   }
 }@media (min-width: 1536px) {
 
@@ -3460,9 +3524,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.rtl\:rotate-180:where([dir="rtl"], [dir="rtl"] *) {
   --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.rtl\:rotate-\[270deg\]:where([dir="rtl"], [dir="rtl"] *) {
-  --tw-rotate: 270deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.rtl\:flex-row-reverse:where([dir="rtl"], [dir="rtl"] *) {
   flex-direction: row-reverse;
