--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -1188,6 +1188,8 @@ video {
   height: 80%;
 }.h-72 {
   height: 18rem;
+}.h-2\/5 {
+  height: 40%;
 }.max-h-72 {
   max-height: 18rem;
 }.max-h-full {
@@ -1273,6 +1275,12 @@ video {
   width: 20%;
 }.w-4\/5 {
   width: 80%;
+}.w-2\/5 {
+  width: 40%;
+}.w-3\/5 {
+  width: 60%;
+}.w-\[27rem\] {
+  width: 27rem;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[theme\(spacing\.4\)\] {
@@ -1334,6 +1342,10 @@ video {
   max-width: 36rem;
 }.max-w-xs {
   max-width: 20rem;
+}.max-w-\[20px\] {
+  max-width: 20px;
+}.max-w-\[10px\] {
+  max-width: 10px;
 }.flex-1 {
   flex: 1 1 0%;
 }.flex-shrink {
@@ -1633,6 +1645,8 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
+}.break-words {
+  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-full {
@@ -1847,6 +1861,8 @@ video {
   padding: 1.25rem;
 }.p-6 {
   padding: 1.5rem;
+}.p-14 {
+  padding: 3.5rem;
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1985,6 +2001,22 @@ video {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
+}.pb-14 {
+  padding-bottom: 3.5rem;
+}.pt-7 {
+  padding-top: 1.75rem;
+}.pb-12 {
+  padding-bottom: 3rem;
+}.pb-11 {
+  padding-bottom: 2.75rem;
+}.pl-6 {
+  padding-left: 1.5rem;
+}.pr-6 {
+  padding-right: 1.5rem;
+}.pb-8 {
+  padding-bottom: 2rem;
+}.pt-5 {
+  padding-top: 1.25rem;
 }.text-left {
   text-align: left;
 }.text-center {
