--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -960,6 +960,8 @@ video {
   margin: -0.75rem;
 }.-m-3\.5 {
   margin: -0.875rem;
+}.m-0 {
+  margin: 0px;
 }.-mx-2 {
   margin-left: -0.5rem;
   margin-right: -0.5rem;
@@ -975,9 +977,6 @@ video {
 }.mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
-}.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }.mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -993,6 +992,9 @@ video {
 }.my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }.-mb-4 {
   margin-bottom: -1rem;
 }.-mb-px {
@@ -1049,6 +1051,8 @@ video {
   margin-left: 1rem;
 }.ml-5 {
   margin-left: 1.25rem;
+}.ml-8 {
+  margin-left: 2rem;
 }.ml-auto {
   margin-left: auto;
 }.mr-2 {
@@ -1059,6 +1063,8 @@ video {
   margin-right: 1.25rem;
 }.mr-7 {
   margin-right: 1.75rem;
+}.mr-8 {
+  margin-right: 2rem;
 }.ms-1 {
   margin-inline-start: 0.25rem;
 }.ms-2 {
@@ -1087,6 +1093,8 @@ video {
   margin-top: 0.75rem;
 }.mt-4 {
   margin-top: 1rem;
+}.mt-5 {
+  margin-top: 1.25rem;
 }.mt-6 {
   margin-top: 1.5rem;
 }.mt-8 {
@@ -1122,10 +1130,18 @@ video {
   height: 0.25rem;
 }.h-1\.5 {
   height: 0.375rem;
+}.h-1\/2 {
+  height: 50%;
+}.h-1\/3 {
+  height: 33.333333%;
+}.h-1\/5 {
+  height: 20%;
 }.h-10 {
   height: 2.5rem;
 }.h-11 {
   height: 2.75rem;
+}.h-12 {
+  height: 3rem;
 }.h-14 {
   height: 3.5rem;
 }.h-16 {
@@ -1138,6 +1154,8 @@ video {
   height: 66.666667%;
 }.h-20 {
   height: 5rem;
+}.h-24 {
+  height: 6rem;
 }.h-3 {
   height: 0.75rem;
 }.h-3\.5 {
@@ -1148,6 +1166,8 @@ video {
   height: 8rem;
 }.h-4 {
   height: 1rem;
+}.h-4\/5 {
+  height: 80%;
 }.h-5 {
   height: 1.25rem;
 }.h-5\/6 {
@@ -1160,6 +1180,8 @@ video {
   height: 15rem;
 }.h-7 {
   height: 1.75rem;
+}.h-72 {
+  height: 18rem;
 }.h-8 {
   height: 2rem;
 }.h-9 {
@@ -1172,6 +1194,8 @@ video {
   height: 270px;
 }.h-\[30rem\] {
   height: 30rem;
+}.h-\[4rem\] {
+  height: 4rem;
 }.h-\[50rem\] {
   height: 50rem;
 }.h-\[calc\(100\%-1rem\)\] {
@@ -1184,20 +1208,10 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.h-1\/5 {
-  height: 20%;
-}.h-4\/5 {
-  height: 80%;
-}.h-72 {
-  height: 18rem;
-}.h-2\/5 {
-  height: 40%;
-}.h-1\/2 {
-  height: 50%;
-}.h-24 {
-  height: 6rem;
 }.h-80 {
   height: 20rem;
+}.h-40 {
+  height: 10rem;
 }.max-h-72 {
   max-height: 18rem;
 }.max-h-full {
@@ -1228,14 +1242,20 @@ video {
   width: 0.5rem;
 }.w-2\.5 {
   width: 0.625rem;
+}.w-2\/5 {
+  width: 40%;
 }.w-20 {
   width: 5rem;
+}.w-28 {
+  width: 7rem;
 }.w-3 {
   width: 0.75rem;
 }.w-3\.5 {
   width: 0.875rem;
 }.w-3\/4 {
   width: 75%;
+}.w-3\/5 {
+  width: 60%;
 }.w-32 {
   width: 8rem;
 }.w-4 {
@@ -1262,8 +1282,12 @@ video {
   width: 24rem;
 }.w-\[--sidebar-width\] {
   width: var(--sidebar-width);
+}.w-\[10rem\] {
+  width: 10rem;
 }.w-\[21rem\] {
   width: 21rem;
+}.w-\[27rem\] {
+  width: 27rem;
 }.w-\[30px\] {
   width: 30px;
 }.w-\[calc\(100\%\+2rem\)\] {
@@ -1279,26 +1303,10 @@ video {
   width: 1px;
 }.w-screen {
   width: 100vw;
-}.w-1\/5 {
-  width: 20%;
-}.w-4\/5 {
-  width: 80%;
-}.w-2\/5 {
-  width: 40%;
-}.w-3\/5 {
-  width: 60%;
-}.w-\[27rem\] {
-  width: 27rem;
 }.w-80 {
   width: 20rem;
-}.w-\[24rem\] {
-  width: 24rem;
-}.w-\[20rem\] {
-  width: 20rem;
-}.w-\[23rem\] {
-  width: 23rem;
-}.w-\[22rem\] {
-  width: 22rem;
+}.w-14 {
+  width: 3.5rem;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[theme\(spacing\.4\)\] {
@@ -1360,10 +1368,6 @@ video {
   max-width: 36rem;
 }.max-w-xs {
   max-width: 20rem;
-}.max-w-\[20px\] {
-  max-width: 20px;
-}.max-w-\[10px\] {
-  max-width: 10px;
 }.flex-1 {
   flex: 1 1 0%;
 }.flex-shrink {
@@ -1498,6 +1502,8 @@ video {
   grid-template-columns: repeat(auto-fit,minmax(0,1fr));
 }.grid-rows-\[1fr_auto_1fr\] {
   grid-template-rows: 1fr auto 1fr;
+}.grid-rows-\[35px_repeat\(6\2c 1fr\)\] {
+  grid-template-rows: 35px repeat(6,1fr);
 }.flex-row {
   flex-direction: row;
 }.flex-row-reverse {
@@ -1571,6 +1577,9 @@ video {
 }.gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
+}.gap-x-80 {
+  -moz-column-gap: 20rem;
+       column-gap: 20rem;
 }.gap-y-1 {
   row-gap: 0.25rem;
 }.gap-y-10 {
@@ -1663,10 +1672,10 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
-}.break-words {
-  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
+}.rounded-2xl {
+  border-radius: 1rem;
 }.rounded-full {
   border-radius: 9999px;
 }.rounded-lg {
@@ -1712,12 +1721,12 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
-}.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
 }.border-x-\[0\.5px\] {
   border-left-width: 0.5px;
   border-right-width: 0.5px;
+}.border-y {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
 }.\!border-t-0 {
   border-top-width: 0px !important;
 }.border-b {
@@ -1763,6 +1772,9 @@ video {
   border-color: rgb(141 162 251 / var(--tw-border-opacity));
 }.border-transparent {
   border-color: transparent;
+}.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }.\!bg-gray-50 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
@@ -1842,6 +1854,9 @@ video {
 }.bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
+}.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 160 8 / var(--tw-bg-opacity));
 }.bg-blue-400\/30 {
   background-color: rgb(118 169 250 / 0.3);
 }.bg-gradient-to-r {
@@ -1884,8 +1899,6 @@ video {
   padding: 1.25rem;
 }.p-6 {
   padding: 1.5rem;
-}.p-14 {
-  padding: 3.5rem;
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1960,14 +1973,20 @@ video {
   padding-bottom: 2rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
+}.pb-14 {
+  padding-bottom: 3.5rem;
 }.pb-2 {
   padding-bottom: 0.5rem;
+}.pb-4 {
+  padding-bottom: 1rem;
 }.pb-5 {
   padding-bottom: 1.25rem;
 }.pb-6 {
   padding-bottom: 1.5rem;
 }.pb-7 {
   padding-bottom: 1.75rem;
+}.pb-8 {
+  padding-bottom: 2rem;
 }.pb-9 {
   padding-bottom: 2.25rem;
 }.pe-0 {
@@ -1994,6 +2013,8 @@ video {
   padding-left: 1.75rem;
 }.pr-10 {
   padding-right: 2.5rem;
+}.pr-4 {
+  padding-right: 1rem;
 }.pr-5 {
   padding-right: 1.25rem;
 }.pr-7 {
@@ -2020,26 +2041,14 @@ video {
   padding-top: 0.5rem;
 }.pt-20 {
   padding-top: 5rem;
+}.pt-4 {
+  padding-top: 1rem;
+}.pt-5 {
+  padding-top: 1.25rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
-}.pb-14 {
-  padding-bottom: 3.5rem;
-}.pt-7 {
-  padding-top: 1.75rem;
-}.pb-12 {
-  padding-bottom: 3rem;
-}.pb-11 {
-  padding-bottom: 2.75rem;
-}.pl-6 {
-  padding-left: 1.5rem;
-}.pr-6 {
-  padding-right: 1.5rem;
-}.pb-8 {
-  padding-bottom: 2rem;
-}.pt-5 {
-  padding-top: 1.25rem;
 }.pl-20 {
   padding-left: 5rem;
 }.text-left {
@@ -2351,10 +2360,10 @@ video {
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
-}.first\:border-t-0:first-child {
-  border-top-width: 0px;
 }.first\:border-s-0:first-child {
   border-inline-start-width: 0px;
+}.first\:border-t-0:first-child {
+  border-top-width: 0px;
 }.last\:border-e-0:last-child {
   border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
@@ -2368,13 +2377,13 @@ video {
 }.hover\:-translate-y-1:hover {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.hover\:scale-110:hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.hover\:transform:hover {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2422,11 +2431,12 @@ video {
 }.hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(240 82 82 / var(--tw-bg-opacity));
-}.hover\:bg-transparent:hover {
-  background-color: transparent;
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.hover\:bg-blue-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 56 118 / var(--tw-bg-opacity));
 }.hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -2459,6 +2469,9 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.hover\:grayscale-0:hover {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2622,6 +2635,9 @@ video {
   border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -2634,9 +2650,6 @@ video {
 }.group:hover .group-hover\:text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.group\/button:hover .group-hover\/button\:text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2798,6 +2811,12 @@ video {
 }.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.dark\:text-black:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}.dark\:text-blue-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.dark\:ring-gray-400\/20:is(.dark *) {
   --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:ring-gray-50\/10:is(.dark *) {
@@ -2958,6 +2977,9 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
+}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -2967,9 +2989,6 @@ video {
 }.group:hover .dark\:group-hover\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
   --tw-ring-color: rgb(31 41 55 / 0.7);
 }.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
@@ -3341,6 +3360,10 @@ video {
     height: auto;
   }
 
+  .md\:h-40 {
+    height: 10rem;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
@@ -3392,6 +3415,10 @@ video {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:justify-start {
+    justify-content: flex-start;
   }
 
   .md\:justify-end {
@@ -3487,12 +3514,12 @@ video {
     height: 100%;
   }
 
-  .lg\:max-w-xs {
-    max-width: 20rem;
-  }
-
   .lg\:max-w-xl {
     max-width: 36rem;
+  }
+
+  .lg\:max-w-xs {
+    max-width: 20rem;
   }
 
   .lg\:-translate-x-full {
@@ -3666,6 +3693,14 @@ video {
 
   .xl\:p-20 {
     padding: 5rem;
+  }
+
+  .xl\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .xl\:p-5 {
+    padding: 1.25rem;
   }
 }@media (min-width: 1536px) {
 
